--- a/package.json
+++ b/package.json
@@ -9,23 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-	"@headlessui/react": "^1.7.14",
+    "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.0.2",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
+    "date-fns": "^2.30.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
-	"formik": "^2.4.1",
+    "formik": "^2.4.1",
+    "moment": "^2.29.4",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "18.2.0",
     "swiper": "^10.0.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
-	"yup": "^1.2.0"
+    "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "@types/react-datepicker": "^4.15.0"
   }
 }
