--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
 	  "public/*": ["./public/*"],
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/contexts/cart.tsx", "src/contexts/rooms.jsx"],
   "exclude": ["node_modules"]
 }
