--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.18",
-    "@material-tailwind/react": "^2.0.2",
+    "@material-tailwind/react": "^2.0.7",
     "@types/node": "20.4.4",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
@@ -29,6 +29,7 @@
     "swiper": "^10.0.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
+    "use-react-countries": "^1.1.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
